2012-07-07 15:52  paddockd

	* [r364] ChangeLog, src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/help.c, src/squeezeslave/squeezeslave.c: Solaris
	  now defaults to the device mixer for volume changes.
	  Increased revision to 364.

2012-07-07 12:48  paddockd

	* [r363] ChangeLog, src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/squeezeslave.c: Portmixer debug messages
	  cleanup.
	  Increased revision to 363.

2012-07-07 12:36  paddockd

	* [r362] ChangeLog, src/slimaudio/slimaudio.h,
	  src/slimaudio/slimaudio_http.c, src/squeezeslave/help.c,
	  src/squeezeslave/squeezeslave.c: Added -O/--output_threshold
	  option to ignore output threshold from server when buffering and
	  use the specified value in bytes.
	  Increased revision to 362.

2012-07-06 17:36  paddockd

	* [r361] ChangeLog, lib/portmixer/px_solaris/px_solaris.c,
	  src/squeezeslave/squeezeslave.c: Removed error reporting from
	  solaris portmixer module.
	  Increased revision to 361.

2012-07-05 20:31  paddockd

	* [r360] ChangeLog, contrib/makefile.sol-gcc-sparc-display,
	  lib/portmixer/px_solaris, lib/portmixer/px_solaris/px_solaris.c,
	  makefile.sol10-intel-display, makefile.sol10-sparc64-display,
	  makefile.sol9-sparc-display, src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/squeezeslave.c: Added solaris portmixer support
	  from kiax 0.8.51.
	  Increased revision to 360.

2012-07-03 21:33  paddockd

	* [r359] ChangeLog, src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/squeezeslave.c: Added stream active check to
	  output PAUSE case for portaudio v18.
	  Increased revision to 359.

2012-07-03 21:29  paddockd

	* [r358] ChangeLog, lib/portaudio/pa_unix_oss/pa_unix_solaris.c,
	  src/squeezeslave/squeezeslave.c: Pause and flush only required
	  when changing record parameters in Solaris.
	  Increased revision to 358.

2012-07-02 18:43  paddockd

	* [r357] ChangeLog, lib/portaudio/pa_unix_oss/pa_unix.c,
	  src/squeezeslave/squeezeslave.c: Applied Linux Duplex bug fix